# rein

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/ab_demo/: golden_run.jsonl  record_failure.py  record_golden.py  report.html  rules.yaml  run.jsonl
docs/superpowers/plans/: 2026-07-21-m3-oss-release-prep.md
docs/superpowers/specs/: 2026-07-21-m3-oss-release-prep-design.md
examples/: README.md  guardrail_rule_yaml.py  quickstart_context_manager.py  quickstart_register_tool.py  replay_verify_workflow.py  rules.yaml
src/rein/: __init__.py  cli.py  exceptions.py  harness.py
src/rein/adapters/: __init__.py  builtin.py  protocol.py
src/rein/adapters/providers/: __init__.py  anthropic.py  local.py  openai.py
src/rein/events/: __init__.py  event_store.py
src/rein/guardrails/: __init__.py  exceptions.py  verdict.py
src/rein/replay/: __init__.py  engine.py
src/rein/report/: __init__.py  builder.py  models.py  renderer.py
src/rein/report/templates/: report.html.j2
src/rein/rules/: __init__.py  runtime.py
tests/: test_adapters.py  test_cli_replay.py  test_cli_report.py  test_cli_rule_from.py  test_cli_seed.py  test_event_store.py  test_golden_trace.py  test_harness#4.py  test_harness_deny_logging.py  test_harness_issue_29.py  test_harness_issue_33.py  test_harness_issue_4.py  test_harness_issue_55.py  test_harness_issue_65.py  test_harness_live_rerun.py  test_harness_rules_wiring.py  test_intentional_fail.py  test_pipeline.py  test_replay.py  test_report_rendering.py  test_rules.py  test_smoke.py  test_verify_issue_15.py
