[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rein"
version = "0.1.0"
description = "Framework-agnostic middleware for AI agent safety and observability. Agent = Model + Harness."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "rein team" },
]
dependencies = [
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "sqlglot>=27.0",
    "typer>=0.12",
    "rich>=13.0",
    "Jinja2>=3.1",
]

[project.optional-dependencies]
# litellm은 프로바이더 비종속 LLM 호출을 위한 선택 의존성 (CLAUDE.md §10)
llm = ["litellm>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pre-commit>=3.0",
    # 이슈 #15: register_tool을 외부 프레임워크(LangChain)에 붙여도
    # 충돌 없이 동작하는지 검증하기 위한 최소 통합 의존성.
    "langchain-core>=0.3",
]

[project.scripts]
rein = "rein.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/rein"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.coverage.run]
source = ["src/rein"]
